# bombon

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bombon.nix  build-bom.nix  buildtime-dependencies.nix  default.nix  flake.nix  release.nix  runtime-dependencies.nix  shell.nix
.github/: renovate.json
.github/workflows/: ci.yml  gc.yml  update.yml
examples/crane/: Cargo.toml  README.md  flake.nix
examples/flakes/: flake.nix
examples/hello/: flake.nix
examples/niv/: default.nix
examples/niv/nix/: sources.json
nix/: build-bom.nix  buildtime-dependencies.nix  ci-shell.nix  passthru-vendored.nix  pre-commit.nix  runtime-dependencies.nix
nix/tests/: default.nix
rust/transformer/: Cargo.toml  rust-toolchain.toml
rust/transformer/src/: buildtime_input.rs  cli.rs  cyclonedx.rs  derivation.rs  hash.rs  main.rs  runtime_input.rs  transform.rs
tests/: default.nix
transformer/: Cargo.toml  rust-toolchain.toml
transformer/src/: buildtime_input.rs  cyclonedx.rs  input.rs  main.rs  runtime_input.rs
