[package]
name = "bombon-transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
cyclonedx-bom = "0.4.3"
itertools = "0.12.0"
serde = { version = "1.0.193", features = [ "derive" ] }
serde_json = "1.0.108"
