[package]
name = "bombon-transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
cyclonedx-bom = "0.4.3"
itertools = "0.12.1"
serde = { version = "1.0.196", features = [ "derive" ] }
serde_json = "1.0.113"
