[package]
name = "bombon-transformer"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", default-features = false, features = ["std", "derive"] }
cyclonedx-bom = "0.6.1"
itertools = "0.13.0"
serde = { version = "1.0.201", features = [ "derive" ] }
serde_json = "1.0.117"
sha2 = "0.10.8"
uuid = "1.8.0"
base64 = "0.22.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny" }
pedantic = { level = "deny" }
unwrap_used = { level = "deny" }
expect_used = { level = "deny" }
lint_groups_priority = { level = "allow", priority = 1 } # https://github.com/rust-lang/rust-clippy/issues/12270
